fix profile img z-index mobile

--- a/src/assets/welcome.scss
+++ b/src/assets/welcome.scss
@@ -28,6 +28,7 @@
     height: 550px;
 
     &__image {
+      z-index: 100;
       height: 200px;
       width: 200px;
     }
